# legate

./: README.md  legate  legate.cabal
src/: Main.hs  legate.hs
src/Legate/: Options.hs
src/Network/Consul/: Http.hs  Types.hs  Util.hs
