name:                legate
version:             0.1
synopsis:            A command line client (and eventual library) for interacting with Consul
homepage:            https://github.com/deviant-logic/legate
license:             BSD3
author:              Alec Heller
maintainer:          alec@deviant-logic.net
build-type:          Simple
cabal-version:       >=1.10

executable legate
  main-is:             legate.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >=4.7 && <4.8,
                       aeson,
                       bytestring,
                       lens,
                       mtl,
                       optparse-applicative >= 0.11,
                       posix-escape,
                       process,
                       text,
                       unordered-containers,
                       unix,
                       wreq
