name:                legate
version:             0.1
synopsis:            A command line client (and eventual library) for interacting with Consul
homepage:            https://github.com/deviant-logic/legate
license:             BSD3
author:              Alec Heller
maintainer:          alec@deviant-logic.net
build-type:          Simple
cabal-version:       >=1.10

executable legate
  main-is:             legate.hs
  hs-source-dirs:      src
  ghc-options:         -threaded
  default-language:    Haskell2010
  build-depends:       base >=4.7 && <4.8,
                       aeson,
                       bytestring,
                       http-client,
                       lens,
                       mtl,
                       network,
                       optparse-applicative >= 0.11,
                       posix-escape,
                       process,
                       text,
                       unix >= 2.7.0.0,
                       unordered-containers,
                       wreq
